--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Python Notebooks, Basics, and Data Structures\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Jonathan Nkangabwa\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -33,10 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "number1 = 64\n",
+    "number2 = 8\n",
+    "results = number1/number2\n",
+    "print(results)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +60,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "[1, 2, 6, 24, 120, 720, 5040, 40320, 362880, 3628800]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#input_set = {1,2,3,4,5,6,7,8,9,10}\n",
+    "#def factorial(num):\n",
+    "#    factorial = 1\n",
+    "#    if num == 0 or num == 1:\n",
+    "#        return 1\n",
+    "#    for i in range(1, num+1):\n",
+    "#        factorial = factorial * i\n",
+    "#    return factorial\n",
+    "\n",
+    "#output = factorial(input_set)\n",
+    "#print(' Factorial of number  ', num, ' is : ', output)\n",
+    "#input_set = {1, 2, 3, 4, 5,6,7,8,9,10}\n",
+    "#for item in input_set:\n",
+    "#    fact = 1\n",
+    "#    for number in range(1,item+1):\n",
+    "#        fact = fact * number\n",
+    "#        print (\"Factorial \"is\", fact)\n",
+    "list =[]\n",
+    "for i in range(1,11):\n",
+    "    list.append(i)\n",
+    "print(list)\n",
+    "def factorial(n):\n",
+    "    output = 1\n",
+    "    for i in range(1, n+1):\n",
+    "        output *= i\n",
+    "    return output\n",
+    "\n",
+    "factorials = []\n",
+    "for i in range(1, 11):\n",
+    "    factorials.append(factorial(i))\n",
+    "print(factorials)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -63,9 +117,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "testlist = [1,-1,2,-2,3,-3,4,-4]"
+    "testlist = [1,-1,2,-2,3,-3,4,-4]\n",
+    "def my_mean(sample):\n",
+    "    return sum(sample) / len(sample)\n",
+    "my_mean(testlist)\n"
    ]
   },
   {
@@ -82,13 +150,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.5\n"
+     ]
+    }
+   ],
    "source": [
-    "list1 = [ 5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
-    "list2 = [-1.780e+0, 2.640e-1, 1.160e+0, 9.080e-1, 1.780e+0, 1.080e+0, 1.050e+0, -4.630e-2, 1.520e+0, 5.350e-1]\n",
-    "# the variances of both lists should be relatively close to 1 (off by less than .15)"
+    "testlist = [1,-1,2,-2,3,-3,4,-4]\n",
+    "\n",
+    "def variance(data):\n",
+    "    n = len(data) #number of observations\n",
+    "    mean = sum(data)/n #mean of list\n",
+    "    deviations = [( x - mean) ** 2 for x in data] #Square deviations\n",
+    "    variance = sum(deviations) / n\n",
+    "    return variance\n",
+    "print(variance(testlist))"
    ]
   },
   {
@@ -105,10 +187,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]\n",
+      "[0, 1, 2, 3, 4]\n",
+      "[10, 11, 12, 13, 14, 15]\n",
+      "[15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[0, 2, 4, 6, 8, 10, 12, 14]\n",
+      "[0, 3, 6, 9, 12, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_15 = []\n",
+    "for i in range(16):\n",
+    "     list_15.append(i)\n",
+    "print(list_15)\n",
+    "\n",
+    "\n",
+    "print(list_15[:5:1])\n",
+    "\n",
+    "print(list_15[10::1])\n",
+    "\n",
+    "print(list_15[:-16:-1])\n",
+    "\n",
+    "print(list_15[0::2])\n",
+    "\n",
+    "print(list_15[0::3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +237,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Web Mining and Applied Natural Language Processing', 'course_num': '44-608', 'semester': 'Fall 2022', 'credit_hours': '3', 'objectives': {'Module 1': ['Github', 'Python Environments', 'Python Review'], 'Module 2': ['Python Data Structures', 'Notebooks'], 'Module 3': ['Visualization in Python Notebooks'], 'Module 4': ['JSON', 'API Data Sources'], 'Module 5': ['XML', 'HTML', 'CSS'], 'Module 6': ['Web Scraping'], 'Module 7': ['Additional topics', 'practice']}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_info = {'name': 'Web Mining and Applied Natural Language Processing',\n",
+    "              'course_num': '44-608',\n",
+    "              'semester': 'Fall 2022',\n",
+    "              'credit_hours': '3',\n",
+    "              'objectives': {'Module 1': ['Github', 'Python Environments', 'Python Review'],\n",
+    "                             'Module 2': ['Python Data Structures', 'Notebooks'],\n",
+    "                             'Module 3': ['Visualization in Python Notebooks'],\n",
+    "                             'Module 4': ['JSON', 'API Data Sources'],\n",
+    "                             'Module 5': ['XML', 'HTML', 'CSS'],\n",
+    "                             'Module 6': ['Web Scraping'],\n",
+    "                             'Module 7': ['Additional topics', 'practice']}\n",
+    "             }\n",
+    "print(class_info)             "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,9 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead']\n"
+     ]
+    }
+   ],
    "source": [
     "player_character = {'name': 'Kitab',\n",
     "                   'class': [('Cleric: Knowledge', 7)],\n",
@@ -151,7 +292,9 @@
     "                             'level 2': ['Augury', 'Calm Emotions', 'Command', 'Invisibility', 'Lesser Restoration'],\n",
     "                             'level 3': ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead'],\n",
     "                             'level 4': ['Banishment', 'Confusion']}\n",
-    "                   }"
+    "                   }\n",
+    "\n",
+    "print(player_character['spells']['level 3'])"
    ]
   },
   {
@@ -163,11 +306,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count-  12\n"
+     ]
+    }
+   ],
    "source": [
-    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]"
+    "#input list\n",
+    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]\n",
+    "\n",
+    "#converts list to set\n",
+    "to_set = set(values)\n",
+    "\n",
+    "#prints count of unique values\n",
+    "print(\"Count- \", len(to_set))"
    ]
   },
   {
@@ -188,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
